@@ -1,17 +1,23 @@
 TO DO
 
+- new view, split view: still broken
+- might still need brutal undo code to avoid lumping everything together
+- still fold at end expand bug
 - MacOS X plugin
 - help: expand user's guide -> using jEdit by default
 - MacOS X status bar hack
-- new view, split view doesn't work
-- might still need brutal undo code to avoid lumping everything together
 - too many lines being made invisible
-- CCW rotated text not drawn correctly
 - new goodies need to be documented
 - conventions section in user's guide: mention Enter activating default
   button, Escape activating 'Cancel' or equivalent
 - mention Alt-key mnemonics
 - QuickNotepad XSL docs
+- help viewer: more informative welcome screen with quick links to some
+  parts of the user's guide. always shown initially when help viewer
+  opened.
+
+- eliminate second pass when loading files
+- CCW rotated text not drawn correctly
 - write explicit folding tips
 - investigate nextLineRequested() -- replace with a buffer event.
 - gutter scope bracket repaint problems
@@ -34,9 +40,6 @@ TO DO
   + more intuitive button labels throughout
 - alt-key mnemonics for fields in vfs file dialog
 
-- help viewer: more informative welcome screen with quick links to some
-  parts of the user's guide. always shown initially when help viewer
-  opened.
 - tab: if indent-on-tab on, only indent if in leading whitespace; make
   indent on tab on by default
 - getFoldLevel(): should not call linesChanged() all the time
